// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`17806.css format 1`] = `
====================================options=====================================
parsers: ["css", "scss", "less"]
                                                      printWidth: 80 (default) |
=====================================input======================================
:root {
  --l: , #000;
}

=====================================output=====================================
:root {
  --l: , #000;
}

================================================================================
`;

exports[`emoji.css format 1`] = `
====================================options=====================================
parsers: ["css", "scss", "less"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* 😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄 */

--foo: {
  color: red;
  /* 😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄 */
}

=====================================output=====================================
/* 😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄 */

--foo: {
  color: red;
  /* 😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄😄 */
};

================================================================================
`;
